[master] initiales template erstellt
Signed-off-by: Huluvu424242 alias Thomas Schubert <huluvu424242@gmail.com>

--- a/src/demo.html
+++ b/src/demo.html
@@ -10,13 +10,13 @@
   <script type="text/javascript" src="redirect.js"></script>
   <script> recieveRedirect();</script>
   <!-- app entry point  so load the app  -->
-  <script type="module" src="../dist/honey-news/honey-news.esm.js"></script>
+  <script type="module" src="../dist/honey-template/honey-template.esm.js"></script>
   <script nomodule
-          src="../dist/esm/honey-news.js"></script>
-  <link rel="stylesheet" href="../dist/honey-news/honey-news.css"/>
+          src="../dist/esm/honey-template.js"></script>
+  <link rel="stylesheet" href="../dist/honey-template/honey-template.css"/>
   <base href="/"/>
 </head>
 <body id="seite">
-  <honey-news site-basepath="/honey-news" local-basepath="/honey-news/docs"/>
+  <honey-template site-basepath="/honey-template" local-basepath="/honey-template/docs"/>
 </body>
 </html>
