--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Honey-News Feed Reader</title>
+  <title>honey-template Feed Reader</title>
   <!-- infrastructur to load the app from route -->
   <script type="text/javascript" src="redirect.js"></script>
   <script type="text/javascript">recieveRedirect()</script>
   <!-- app entry point  so load the app  -->
-  <script type="module" src="./build/honey-news.esm.js"></script>
-  <script nomodule src="./build/honey-news.js"></script>
-  <link rel="stylesheet" href="./build/honey-news.css"/>
-  <base href="/honey-news">
+  <script type="module" src="./build/honey-template.esm.js"></script>
+  <script nomodule src="./build/honey-template.js"></script>
+  <link rel="stylesheet" href="./build/honey-template.css"/>
+  <base href="/honey-template">
 </head>
 <body id="seite">
-  <honey-news site-basepath="/honey-news" local-basepath="/" />
+  <honey-template site-basepath="/honey-template" local-basepath="/" />
 </body>
 </html>
